# minecraft-server-cli

./: Cargo.toml  LICENSE  README.md  msc-configuration.ron  package.json
src/: machine.rs  main.rs
