[package]
name = "minecraft-server-cli"
version = "0.1.0"
authors = ["Chris Brown <chris_brown@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
console = "0.14.1"
execute = "0.2.8"
ron = "0.6.4"
serde = "1.0.125"
enumflags2 = "0.7.1"
statechart = "0.0.8"
strum_macros = "0.20.1"
snowflake = "1.2"
pub-sub = "2.0.0"
smart-default = "0.6.0"