[package]
name = "minecraft-server-cli"
version = "0.1.0"
authors = ["Andria Brown <andria_girl@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.8.0"
console = "0.14.1"
execute = "0.2.8"
ron = "0.6.4"
serde = "1.0.125"
enumflags2 = "0.7.1"
smart-default = "0.6.0"
clap = "2.33.3"